Se corrigen problemas en el CSS de pygments y se agrega configuracion a mathjax

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,6 +40,9 @@
      		SVG: {
         		scale: 120,
         		font: 'Gyre-Pagella'},
+        	"HTML-CSS": {
+        		webFont: ['Gyre-Pagella'],
+        		availableFonts: [] },
      		tex2jax: {
         		inlineMath: [ ['$','$'], ["\\(","\\)"] ],
        			displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
